# parallel_neural_network

./: CMakeLists.txt  main.cpp
headers/: learning.hpp  ml.hpp  nn.hpp  populationtable.hpp  samplestable.hpp  singlekernel.hpp  task.hpp
kernels/: activate_layer.cl  error.cl  executive_layer.cl  update.cl
sources/: learning.cpp  nn.cpp  populationtable.cpp  samplestable.cpp  task.cpp
